Update federated learning page with comprehensive RDMKit compliance improvements
✅ Enhanced front-matter with comprehensive description
✅ All content accuracy improvements:
   - Flower SecAgg experimental status clarification
   - Merged duplicate monitoring sections
   - Added Model Card YAML example
   - Enhanced threat modelling with LINDDUN-PRO

✅ Style and structure improvements:
   - Fixed all heading capitalization and ampersands
   - Improved accessibility with proper image formatting
   - Streamlined tools section (removed duplicates)
   - Added Evidently AI for production monitoring

✅ Content organization:
   - Comprehensive FAIR metadata and provenance section
   - Reproducibility and versioning guidelines
   - Legal and ethical compliance guidance
   - Bias and equity considerations
   - Threat modelling and risk assessment

✅ Professional presentation ready for showcase
✅ All improvements from RDMKit review applied